--- a/imports/ui/styles/components/_StartPage.scss
+++ b/imports/ui/styles/components/_StartPage.scss
@@ -1,3 +1,18 @@
 .StartPage {
-  
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0);
+}
+
+.StartPage > h1 {
+  margin-top: 100px;
+  color: rgba(255, 255, 255, 0.6);
+  text-align: center;
+}
+
+.StartPageBackground {
+  position: absolute;
+  z-index: -1;
 }
