--- a/imports/ui/styles/components/_StartPage.scss
+++ b/imports/ui/styles/components/_StartPage.scss
@@ -16,3 +16,61 @@
   position: absolute;
   z-index: -1;
 }
+
+.SignUpForm,
+.LoginForm {
+  background-color: rgba(255, 255, 255, 0.4);
+  box-shadow: 0 5px 15px rgba(255, 255, 255, 0.2);
+  width: 60%;
+  border-radius: 3px;
+  margin: 0 auto;
+}
+
+.SignUpForm form,
+.LoginForm form {
+  width: $login-form-width;
+  margin: 0 auto;
+  padding: 25px 0;
+}
+
+.SignUpForm input,
+.LoginForm input {
+  background-color: rgba(255, 255, 255, 0.7);
+  padding: 15px;
+  margin: 10px 0;
+  border: none;
+  outline: none;
+  width: $login-form-width;
+  border-radius: 25px;
+  display: block;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.SignUpForm button,
+.LoginForm button {
+  cursor: pointer;
+  padding: 13px;
+  margin: 10px 0;
+  border: none;
+  outline: none;
+  width: $login-form-width;
+  border-radius: 25px;
+  color: white;
+  font-size: 20px;
+  background-color: #2196F3;
+  transition-duration: 0.4s;
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+  
+  &:hover {
+    background-color: #1976D2;
+  }
+}
+
+@media (max-width: 600px ) {
+  .SignUpForm,
+  .LoginForm {
+    width: 90%;
+  }
+}
