--- a/imports/ui/styles/main.scss
+++ b/imports/ui/styles/main.scss
@@ -10,4 +10,5 @@
 @import 'components/App';
 @import 'components/HomePage';
 @import 'components/SideBar';
+@import 'components/EditMarker';
 @import 'components/StartPage';
