--- a/imports/ui/styles/components/_EditMarker.scss
+++ b/imports/ui/styles/components/_EditMarker.scss
@@ -1,4 +1,4 @@
-.SideBar {
+.EditMarker {
   position: absolute;
   top: 0;
   right: 0;
@@ -25,42 +25,24 @@
       outline: none;
     }
 
-    input[name=name] {
+    input[name=rename] {
       display: block;
       width: 100%;
       border-radius: 5px;
       border: 3px solid #222;
     }
 
-    input[name=lat],
-    input[name=lng] {
-      width: 45%;
-      height: 30px;
-      margin-left: 5px;
-      margin-right: 5px;
-      text-align: center;
-      background-color: #FFB74D;
-      border: none;
-      border-radius: 15px;
-    }
-
-    ::placeholder {
-      color: #222;
-    }
-
     button {
-      margin-top: 5px;
+      margin: 7px 0;
     }
-  }
- 
-}
 
-@keyframes show {
-  from {
-    transform: translateX(100%);
-  }
+    button[name=save] {
+      @include btnColor(#8BC34A, #689F38);
+    }
 
-  to {
-    transform: translateX(0);
+    button[name=delete] {
+      @include btnColor(#f44336, #d32f2f);
+    }
+
   }
 }
