Add Loading page

--- a/imports/ui/styles/main.scss
+++ b/imports/ui/styles/main.scss
@@ -8,6 +8,7 @@
 @import 'components/btn';
 // components
 @import 'components/App';
+@import 'components/Loading';
 @import 'components/HomePage';
 @import 'components/SideBar';
 @import 'components/EditMarker';
